--- a/.github/workflows/N1-ImmortalWrt-18.06-K5.4.yml
+++ b/.github/workflows/N1-ImmortalWrt-18.06-K5.4.yml
@@ -6,6 +6,9 @@ on:
     types:
       - N1-ImmortalWrt-18.06-K5.4
 
+env:
+  TZ: Etc/UTC
+
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -27,19 +30,30 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        #docker rmi $(docker images -q) 2>/dev/null
-        sudo -E apt-get -qq update
+        docker rmi -f $(docker images -q) 2>/dev/null || true
+        [[ -n "${AGENT_TOOLSDIRECTORY}" ]] && sudo rm -rf "${AGENT_TOOLSDIRECTORY}"
+        sudo rm -rf /usr/share/dotnet /usr/local/lib/android 2>/dev/null
+        sudo swapoff -a
+        sudo rm -f /swapfile /mnt/swapfile
+        sudo -E apt-get -y update
+        sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
         sudo -E apt-get -qq install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache clang cmake cpio \
           curl device-tree-compiler ecj fastjar flex gawk gettext gcc-multilib g++-multilib git gnutls-dev gperf haveged help2man intltool lib32gcc-s1 \
           libc6-dev-i386 libelf-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses-dev libpython3-dev libreadline-dev \
           libssl-dev libtool libyaml-dev libz-dev lld llvm lrzsz mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python3 python3-pip \
           python3-ply python3-docutils python3-pyelftools qemu-utils re2c rsync scons squashfs-tools subversion swig texinfo uglifyjs \
           upx-ucl unzip vim wget xmlto xxd zlib1g-dev zstd
-        sudo -E apt-get -qq autoremove --purge
-        sudo -E apt-get -qq clean
-        sudo -E git config --global user.name 'GitHub Actions' && git config --global user.email 'noreply@github.com'
-        sudo -E git config --global core.abbrev auto
-        df -h
+        sudo -E systemctl daemon-reload
+        #sudo -E apt-get -y full-upgrade
+        sudo -E apt-get -y autoremove --purge
+        sudo -E apt-get clean
+        sudo sed -i '/NVM_DIR/d;/skel/d' /root/{.bashrc,.profile}
+        sudo rm -rf ~/{.cargo,.dotnet,.rustup}
+        sudo -E timedatectl set-timezone "${TZ:-Etc/UTC}"
+        sudo -E ntpdate ntp.ubuntu.com 0.pool.ntp.org || true
+        sudo -E timedatectl set-ntp true
+        date -u
+        timedatectl status || true
 
     - name: Create simulated physical disk
       run: |
@@ -57,28 +71,17 @@ jobs:
         sudo mkdir -p /builder
         sudo mount /dev/github/runner /builder
         sudo chown -R runner:runner /builder
-        # Prepare cached directory
-        echo "Preparing cached directory..."
-        sudo cp -af /home/runner/actions-runner/cached /builder/cached
-        rm -rf /home/runner/actions-runner/cached
-        sudo ln -sf /builder/cached /home/runner/actions-runner/cached
-        echo "_diag directory content:"
-        ls -lh /home/runner/actions-runner/cached/_diag/ 2>/dev/null
-        echo "Verifying the symbolic link..."
-        ls -ld /home/runner/actions-runner/cached
-        df -Th /home/runner/actions-runner/cached
-        echo "Server disk layout:"
         df -Th
 
     - name: Prepare source code
       working-directory: /builder
       run: |
-        sudo chown -R runner:runner /home/runner/work/build_openwrt
         cp -r ${{ github.workspace }}/. ./
         cp -r ./scripts/immortalwrt-18.06-k5.4/. ./
         ./01_prepare_source_code.sh
         ln -sf /builder/openwrt ${{ github.workspace }}/openwrt
-        ln -sf /builder/openwrt /home/runner/work/_actions/ffuqiangg/openwrt_packit/master/openwrt
+        sudo rm -rf /opt && sudo ln -sf /builder/opt /opt
+        ln -sf /builder/opt ${{ github.workspace }}/opt
 
     - name: Prepare package
       working-directory: ${{ github.workspace }}/openwrt
